# lecture_rag

./: .gitignore  CLAUDE.md  TODO.md
lecture_rag_backend/: TODO.md  app.py  pyproject.toml  test.py
lecture_rag_backend/cocoindex.db/mdb/: lock.mdb
lecture_rag_backend/src/: config.py
lecture_rag_backend/src/data/: DEMO_TEXT.txt  basic_prompt.md  classify_prompt.md  cocoindex_pipeline.py  dialogue_prompt.md  sample_cosign_lookup.txt  system_prompt.md
lecture_rag_backend/src/data/data_corpus/: PHIL 1000 - Q&A.md  PHIL 3600 - Q&A.md  PHIL_1000_-_00_-_Course_Intro.txt  PHIL_1000_-_18_-_Civility.txt  (+24 more)
lecture_rag_backend/src/models/: data_chunks.sql  response_cache.sql
lecture_rag_backend/src/routes/: chat.py
lecture_rag_backend/src/schema/: conversations.sql
lecture_rag_backend/src/services/: build_prompt.py  cache_lookup.py  cache_write.py  classify_query.py  compact_history.py  context_retrieval.py  conversation_deletion.py  conversations_retrieval.py  generate_summary.py  history_retrieval.py  replace_history.py  retrieve_or_create_history.py  update_history.py  update_with_summary.py
lecture_rag_backend/tests/: conftest.py
lecture_rag_backend/tests/test_routes/: test_chat.py
lecture_rag_backend/tests/test_services/: test_build_prompt.py  test_cache_lookup.py  test_cache_write.py  test_classify_query.py  test_compact_history.py  test_context_retrieval.py  test_conversation_deletion.py  test_conversations_retrieval.py  test_generate_summary.py  test_replace_history.py  test_retrieve_or_create_history.py  test_update_history.py  test_update_with_summary.py
(+101 files in other folders)
